<resources>
    <string name="app_name">FarmaE-Control</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_sucursales">Sucursales</string>
    <string name="title_cuenta">Cuenta</string>
    <string name="title_carrito">Carrito</string>
    <string name="title_membresia">Membresia</string>
    <string name="title_notifications">Notificacion</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_iniciosesion">Inicio de Sesión</string>
    <string name="title_registosesion">Registro de Sesión</string>
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery"</string>
    <string name="title_categoria">Categorias</string>
    <string name="title_editarcuenta">EditarCuenta</string>
    <string name="title_productos">Productos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>