<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navegacionInicio"
        android:icon="@drawable/iconinicio"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_sucursales"
        android:icon="@drawable/iconsucursales"
        android:title="@string/title_sucursales"
        />

    <item
        android:id="@+id/navigacionCuenta"
        android:icon="@drawable/iconcuenta"
        android:title="@string/title_cuenta"
        />

    <item
        android:id="@+id/navigacionCarrito"
        android:icon="@drawable/iconcarrito"
        android:title="@string/title_carrito"
        />
    <item
        android:id="@+id/navigacionMembresia"
        android:icon="@drawable/iconmembresias"
        android:title="@string/title_membresia"
        />

</menu>